--- a/html/tijs/tijs.html
+++ b/html/tijs/tijs.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="../../css/tijs.css">
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper"></div>
         <header>
             <a href="../index.html" class="back-button">← Terug naar homepagina</a>
-            <h1>Portfolio Tijs den Ambtman</h1>
+            <h1>Portfolio Tijs den Weger</h1>
             <div class="profile-pic">
                 <img src="../../images/tijs.jpg" alt="tijs den Ambtman">
             </div>
