--- a/html/arian/SmartCon/smartcon.html
+++ b/html/arian/SmartCon/smartcon.html
@@ -31,6 +31,7 @@
                         <li><a href="../SmartTech/smarttech.html">Smart Technology</a></li>
                         <li><a href="smartcon.html" class="active">Smart Connection</a></li>
                         <li><a href="../SmartBus/smartbus.html">Smart Business</a></li>
+                        <li><a href="../SmartTech/smartvideo.html">Video IoT</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,6 +39,24 @@
         </header>
 
         <main>
+
+            
+            <section class="weekly-updates">
+                <h2>Ontwikkeling - Smart Connection</h2>
+
+
+                <div class="week-box" id="week">
+                    <div class="week-header">Arian</div>
+                    <div class="week-content">
+                        <p>De minor Smart Connection heeft mijn kennis over het bouwen van websites aanzienlijk vergroot. Na het eerste jaar van mijn HBO-ICT-studie had ik me hier niet verder in verdiept, waardoor deze ervaring voor mij van grote waarde was. <br><br>Het heeft mij niet alleen geholpen om mijn coderingsvaardigheden te verbeteren, een gebied waarin ik nog niet sterk was, maar het heeft ook bijgedragen aan mijn persoonlijke ontwikkeling.
+
+                            Tijdens het maken van mijn portfolio-website ben ik tegen verschillende uitdagingen aangelopen. <br><br>Dankzij de ervaring die ik heb opgedaan in analytisch denken, kon ik deze problemen effectief oplossen. Het werken met API’s was voor mij een nieuwe ervaring. Hoewel het in het begin lastig leek, werd het eenvoudiger naarmate ik meer vertrouwd raakte met de werkwijze. Als IT’er beschikte ik al over enige basiskennis, maar voor iemand zonder ervaring in dit domein kan dit zeker uitdagend zijn, vooral gezien de beperkte hoeveelheid lessen die specifiek gericht waren op het leren bouwen van een website.
+                            
+                            Alles bij elkaar heeft deze minor voor mij gediend als een waardevolle opfriscursus in het bouwen van websites. Het gaf me niet alleen hernieuwde inzichten, maar ook de praktische ervaring om mijn vaardigheden verder aan te scherpen. </p>
+
+                    </div>
+                </div>
+
             <div class="assignment-container">
                 <!-- Assignment 1: Weather Section -->
                 <section class="assignment">
