--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
     <!-- Teamsectie blijft, maar naar onder geduwd -->
     <section class="team-section">
      <div class="team-member">
-      <a href="arian/arian.html" target="_blank">
+      <a href="arian/arian.html">
        <img alt="arian" src="../images/arian.jpg"/>
       </a>
       <p>
@@ -33,8 +33,8 @@
       </p>
      </div>
      <div class="team-member">
-      <a href="bram/bram.html" target="_blank">
-       <img alt="Bram" src="../images/placeholder.jpg"/>
+      <a href="bram/bram.html">
+       <img alt="Bram" src="../images/bram.png"/>
       </a>
       <p>
        Bram de Weger
