--- a/html/SmartProj.html
+++ b/html/SmartProj.html
@@ -45,6 +45,7 @@ Op 8 januari vond ons laatste voortgangsgesprek plaats met onze projectbegeleide
                 <img src="../images/proj33.png" alt="x">
                 <img src="../images/proj4.png" alt="x">
                 <img src="../images/proj5.png" alt="x">
+                <img src="../images/proj55.png" alt="x">
                 <img src="../images/foto9.jpg" alt="x">
 
             </section>
