--- a/html/arian/SmartCon/smartcon.html
+++ b/html/arian/SmartCon/smartcon.html
@@ -19,7 +19,7 @@
                 <div class="header-center">
                     <nav class="navbar">
                         <ul>
-                            <li><a href="../mike.html">Terug</a></li>
+                            <li><a href="../IntroArian.html">Terug</a></li>
                         </ul>
                     </nav>
                 </div>
