--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
     <!-- Teamsectie blijft, maar naar onder geduwd -->
     <section class="team-section">
      <div class="team-member">
-      <a href="arian/arian.html" target="_blank">
+      <a href="arian/IntroArian.html" target="_blank">
        <img alt="arian" src="../images/arian.jpg"/>
       </a>
       <p>
