--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
      </div>
      <div class="team-member">
       <a href="bram/bram.html" target="_blank">
-       <img alt="Bram" src="../images/placeholder.jpg"/>
+       <img alt="Bram" src="../images/bram.png"/>
       </a>
       <p>
        Bram de Weger
