--- a/html/bram/SmartCon/smartcon.html
+++ b/html/bram/SmartCon/smartcon.html
@@ -29,7 +29,7 @@
                         <li><a href="../SmartTech/smarttech.html">Smart Technology</a></li>
                         <li><a href="../SmartCon/smartcon.html" class="active">Smart Connection</a></li>
                         <li><a href="../SmartBus/smartbus.html">Smart Business</a></li>
-                        <li><a href="../SmartProj/smartproj.html">Smart Project</a></li>
+                        <li><a href="../SmartProj/smartproj.html">IoT video</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,8 +37,18 @@
         </header>
 
         <main>
+
+        
             <div class="assignment-container">
                 <!-- Assignment 1: Weather Section -->
+                <h1>Smart Connection</h1>
+                <p>
+                    Tijdens het onderdeel Smart Connection heb ik ervaren hoe krachtig het is om data uit te wisselen tussen verschillende systemen. Hoewel ik al enige kennis van webtechnologie had, kwam er toch veel nieuws op me af. Zo ontdekte ik hoe API-calls een project kunnen verrijken door externe data in te laden en te verwerken, waardoor je veel sneller tot nieuwe inzichten of functionaliteiten komt.
+    
+    Een voorbeeld hiervan is het ophalen van (externe) data om die real-time weer te geven in een eigen toepassing. In het begin leek het abstract—je stuurt een verzoek naar een server en krijgt ‘iets’ terug—maar door ermee te experimenteren, besefte ik al snel hoe onmisbaar dit is in moderne webprojecten. We staan tenslotte niet meer op eilandjes, maar koppelen onze diensten aan die van anderen om tot sterkere en completere oplossingen te komen.
+    <br> <br> Door Smart Connection heb ik een beter beeld gekregen van hoe data, webtechnologie en verschillende online diensten naadloos in elkaar kunnen grijpen. Deze kennis pas ik nu al toe in andere projecten, waar de integratie van systemen een steeds grotere rol speelt. Ik merk dat ik door dit onderdeel niet alleen handiger ben geworden in de praktische kant van webontwikkeling, maar ook meer overzicht heb over hoe die losse technische onderdelen samenkomen tot één geheel.
+                </p>
+
                 <section class="assignment">
                     <h2>Weer API</h2>
                     <div class="city-selection">
@@ -82,7 +92,7 @@
                 <section class="assignment">
                     <h2>NASA  Picture of the Day</h2>
                     <div>
-                        <h3>Selecteer een datum</h3>
+                        <h3>Selecteer een datum </h3>
                         <input type="date" id="nasa-date" max="2026-12-31" onchange="fetchNasaPhoto()">
                     </div>
                     <div id="nasa-container">
