--- a/html/bram/SmartTech/smarttech.html
+++ b/html/bram/SmartTech/smarttech.html
@@ -28,7 +28,7 @@
                         <li><a href="../SmartTech/smarttech.html" class="active">Smart Technology</a></li>
                         <li><a href="../SmartCon/smartcon.html">Smart Connection</a></li>
                         <li><a href="../SmartBus/smartbus.html">Smart Business</a></li>
-                        <li><a href="../SmartProj/smartproj.html">Smart Project</a></li>
+                        <li><a href="../SmartProj/smartproj.html">IoT video</a></li>
                     </ul>
                 </nav>
             </div>
@@ -40,8 +40,8 @@
 
             <h1>Introductie</h1>
            
-            
-               <p> In de eerste weken van de minor kregen we een ESP32 in handen en werkten we met een handleiding van RobotExchange.io. Hoewel ik vanuit mijn studie al bekend was met microcontrollers, vond ik het toch nuttig om alles stap voor stap te doorlopen. Zo kon ik controleren of elk onderdeel naar behoren functioneerde en kreeg ik direct gevoel bij de mogelijkheden van de ESP32. Het device bleek verrassend krachtig en flexibel, wat al snel van pas kwam bij de daaropvolgende opdrachten.            </p>
+            <p>
+                Tijdens onze minor Smart Industry hebben we geleerd hoe je door technologieën als IoT, sensoren en automatisering te combineren, slimme systemen kunt ontwikkelen. We ontdekten hoe data werd verzameld en verwerkt om processen te optimaliseren of nieuwe toepassingen te bedenken. Deze kennis was voor ons als studenten erg waardevol, omdat bedrijven steeds meer behoefte hebben aan mensen die technologie in de praktijk kunnen toepassen. Door in projecten te experimenteren met deze technieken, zijn we beter voorbereid op een toekomst waarin digitale en slimme oplossingen een centrale rol spelen.</p>
             </p>
             <h2>Componenten</h2>
             <p> In de eerste weken van de minor kregen we een ESP32 in handen en werkten we met een handleiding van RobotExchange.io. Hoewel ik vanuit mijn studie al bekend was met microcontrollers, vond ik het toch nuttig om alles stap voor stap te doorlopen. Zo kon ik controleren of elk onderdeel naar behoren functioneerde en kreeg ik direct gevoel bij de mogelijkheden van de ESP32. Het device bleek verrassend krachtig en flexibel, wat al snel van pas kwam bij de daaropvolgende opdrachten.            </p>
