--- a/html/bram/bram.html
+++ b/html/bram/bram.html
@@ -47,7 +47,7 @@
                         <h2>Hallo!</h2>
                         <p>Ik ben Bram de Weger, student Elektrotechniek aan Avans Hogeschool in Den Bosch en woonachtig
                             in Nijmegen. Momenteel volg ik de minor Smart Industrie, waarin ik mijn passie voor
-                            technologie en innovatieve toepassingen verder ontwikkel. <br>
+                            technologie en innovatieve toepassingen verder ontwikkel. <br> <br>
                             Tijdens mijn minor Smart Industrie leer ik hoe ik innovatieve technologieën kan toepassen om
                             bedrijfsprocessen slimmer en efficiënter te maken. Daarbij leer ik de vaardigheid om de taal
                             van zowel techniek als business te spreken en deze met elkaar te verbinden.</p>
