--- a/html/SmartProj.html
+++ b/html/SmartProj.html
@@ -47,6 +47,11 @@ Op 8 januari vond ons laatste voortgangsgesprek plaats met onze projectbegeleide
                 <img src="../images/proj5.png" alt="x">
                 <img src="../images/proj55.png" alt="x">
                 <img src="../images/foto9.jpg" alt="x">
+                <img src="../images/W1.png" alt="x">
+                <img src="../images/W2.png" alt="x">
+                <img src="../images/W3.png" alt="x">
+                <img src="../images/W4.png" alt="x">
+                <img src="../images/W5.png" alt="x">
 
             </section>
             <!-- Terug naar homepagina knop -->
